Creados: 1) Bloque con los últimos 8 perfiles visitados. 2) Perfil muestra todos los últimos posts y se pueden ir cargando más. 3) Datos de cada post al hacer clic. 4) Título de la página cambia según la sección.

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/lib/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/assets/lib/line-awesome/css/line-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/site.css" />
-    <title>Instractaram</title>
+    <title>Instractaram • Extraer fotos y videos de Instagram</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
